--- a/css/style.css
+++ b/css/style.css
@@ -74,19 +74,16 @@ body {
     padding-top: 27px;
     padding-bottom: 1px;
     background-color: #eee;
-    outline: 2px solid red;
 }
 
 .main-nav{
     margin-bottom: 43px;
-    outline: 2px solid blue;
 }
 
 .main-nav__logo{
     float: left;
     height: 56px;
     width: 139px;
-    outline: 2px solid red;
 }
 
 .main-nav__logo img{
@@ -101,7 +98,6 @@ body {
     padding: 0;
     list-style: none;
     font-size: 0;
-    outline: 2px solid blue;
 }
 
 .main-nav__item{
@@ -122,7 +118,6 @@ body {
     text-transform: uppercase;
     color: #000;
     text-decoration: none;
-    outline: 2px solid blue;
 }
 
 
@@ -143,7 +138,6 @@ body {
     text-transform: uppercase;
     color: #000;
     text-decoration: none;
-    outline: 2px solid blue;
 }
 
 .main-nav__item--active span::after,
@@ -163,7 +157,6 @@ body {
     margin: 28px 0 0 0;
     padding: 0;
     list-style: none;
-    outline: 2px solid blue;
 }
 
 .main-nav__item{
@@ -179,7 +172,6 @@ body {
     text-transform: uppercase;
     color: #000;
     text-decoration: none;
-    outline: 2px solid blue;
 }
 
 .main-nav__user-item a:hover {
@@ -211,8 +203,6 @@ body {
 .slider{
     position: relative;
     min-height: 310px;
-    overflow: hidden;
-    outline: 2px solid yellow;
 }
 
 .slide__title{
@@ -260,10 +250,10 @@ body {
 }
 
 .slide{
-    position: absolute;
+    position: relative;
     width: 480px;
-    padding-right: 400px;
-    opacity: 0;
+    padding: 1px 400px 80px 0;
+    display: none;
 }
 
 .slide__one{
@@ -280,18 +270,16 @@ body {
 
 
 .slider__input:checked + .slide{
-    opacity: 1;
+    display: block;
 }
 
 
 .slider-toggles{
     position: absolute;
-    top: 205px;
-    height: 10px;
+    bottom: 95px;
     left: 406px;
-    z-index: 120;
+    height: 10px;
     font-size: 0;
-    outline: 2px solid red;
 }
 
 .slider__toggle{
@@ -330,7 +318,6 @@ body {
 main{
     padding-top: 78px;
     padding-bottom: 85px;
-    outline: 2px solid red;
 }
 
 .page-inner main{
@@ -344,14 +331,12 @@ main{
     padding-bottom: 80px;
     margin-bottom: 58px;
     border-bottom: 2px solid #eeeeee;
-    outline: 2px solid blue;
 }
 
 .feature__item{
     float: left;
     width: 240px;
     margin-right: 80px;
-    outline: 2px solid yellow;
 }
 
 .feature__item:last-child{
@@ -394,18 +379,56 @@ main{
     width: 140px;
 }
 
-.btn--sites{
-    background-color: #fb565a;;
+.btn--sites,
+.btn--sites-disabled{
+    background-color: #fb565a;
+}
+
+.btn--sites:hover{
+    background-color: #d6494d;
+}
+
+.btn--sites:active{
+    background-color: #b63538;
 }
 
 .btn--apps{
     background-color: #00ca74;
 }
 
+.btn--apps:hover{
+    background-color: #01a25e;
+}
+
+.btn--apps:active{
+    background-color: #009053;
+}
+
 .btn--presentation{
     background-color: #efc84a;
 }
+.btn--presentation:hover{
+    background-color: #d6ae2c;
+}
+.btn--presentation:active{
+    background-color: #c09b24;
+}
 
+.btn--sites:active,
+.btn--apps:active,
+.btn--presentation:active{
+    box-shadow: inset 0 3px 0 rgba(0,0,0,.15);
+}
+
+.btn--sites:disabled,
+.btn--sites-disabled,
+.btn--apps:disabled,
+.btn--apps-disabled,
+.btn--presentation:disabled,
+.btn--presentation-disabled{
+    opacity: .3;
+    cursor: default;
+}
 
 /*index-content*/
 
@@ -415,7 +438,6 @@ main{
 
 .content-column{
     margin-bottom: 28px;
-    outline: 2px solid blue;
 }
 
 .content-column__left{
@@ -444,7 +466,7 @@ main{
     color: #283136;
     font-family: "Roboto", "Arial", sans-serif;
     font-weight: 500;
-    margin: 0 0 17px 0;
+    margin: 17px 0;
     padding: 0;
 }
 
